Add filters form

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,8 @@ a{
 /* MAIN-CONTENT */
 .main-content{
   flex-grow: 1;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
 
@@ -161,4 +163,30 @@ a{
   font-weight: 600;
   line-height: normal;
   color: var(--text-color);
+}
+
+
+/* FILTERS */
+.filters {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.filters-search-input {
+  min-width: 480px;
+  padding: 18px 74px;
+  background-color: var(--element-bg);
+  color: var(--text-color);
+  border: 0;
+  border-radius: 5px;
+  box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.06);
+}
+.filters-region-select {
+  min-width: 200px;
+  padding: 18px 24px;
+  background-color: var(--element-bg);
+  color: var(--text-color);
+  border: 0;
+  border-radius: 5px;
+  box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.06);
 }
