--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   --body-bg: #fafafa;
   --element-bg: #fff;
   --text-color: #111517;
+  --transition-duration: 0.4s;
   
 }
 
@@ -70,8 +71,8 @@ body{
   line-height: 16px;
   background-color: var(--body-bg);
   color: var(--text-color);
-  transition: background-color 0.5s ease,
-    color 0.5s ease;
+  transition: background-color var(--transition-duration),
+    color var(--transition-duration);
 }
 
 img{
@@ -81,6 +82,7 @@ img{
 
 a{
   text-decoration: none;
+  color: var(--text-color)
 }
 
 *:focus{
@@ -111,6 +113,10 @@ a{
   flex-grow: 1;
   padding-top: 48px;
   padding-bottom: 48px;
+}
+
+.main-content-inner{
+  padding-top: 80px;
 }
 
 
@@ -168,6 +174,7 @@ a{
 
 /* FILTERS */
 .filters {
+  margin-bottom: 48px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -189,4 +196,190 @@ a{
   border: 0;
   border-radius: 5px;
   box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.06);
+}
+
+
+/* INDEX-COUNTRIES */
+.index-countries-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -75px;
+  margin-bottom: -75px;
+}
+.index-countries-item {
+  width: calc(25% - 75px);
+  margin-left: 75px;
+  margin-bottom: 75px;
+  display: flex;
+  border-radius: 5px;
+}
+
+/* INDEX-COUNTRY */
+.index-country{
+  flex-grow: 1;
+  display: flex;  
+  flex-direction: column;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: var(--element-bg);
+  color: var(--text-color);
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
+}
+.index-country-flag {
+  width: 100%;
+  height: 160px;
+  object-fit: cover;
+}
+.index-country-info {
+  padding: 24px 24px 48px;
+}
+.index-country-name {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 26px;
+}
+.index-country-details {
+  margin: 0;   
+}
+.index-country-details-item{
+  display: flex;
+  flex-wrap: wrap;
+}
+.index-country-details-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+.index-country-details-title {
+  font-weight: 600;
+}
+.index-country-details-value {
+  margin-left: 4px;
+}
+
+
+
+/* COUNTRY-PAGE */
+.country-page-back-wrapper {
+  margin-bottom: 80px;
+}
+.country-page-back-link {
+  padding: 10px 40px;
+  display: inline-flex;
+  align-items: center;
+  background-color: var(--element-bg);
+  border-radius: 6px;
+  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.3);
+}
+.country-page-back-link:hover{
+  opacity: 0.8;
+}
+.country-page-back-link:active{
+  opacity: 0.6;
+}
+.country-page-back-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.country-page-back-text {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 20px;
+}
+
+
+/* COUNTRY-PAGE-FLAG-INFO */
+.country-page-flag-info {
+  display: flex;
+}
+
+/* COUNTRY-PAGE-FLAG */
+.country-page-flag {
+  width: 560px;
+  height: 401px;
+  margin-right: 120px;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 0 14px 4px rgba(0, 0, 0, 0.2)
+}
+
+/* COUNTRY-PAGE-INFO */
+.country-page-info {
+  width: 600px;
+  padding-top: 40px;
+}
+.country-page-title {
+  margin-top: 0;
+  margin-bottom: 23px;
+  font-size: 32px;
+  font-weight: 800;
+  line-height: normal;
+}
+.country-page-dls-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 90px;
+}
+.country-page-details {
+  width: 250px;
+}
+.country-page-details-item {
+  display: flex;
+}
+.country-page-details-item:not(:last-child){
+  margin-bottom: 8px;
+}
+.country-page-details-title {
+  margin-right: 4px;
+  font-weight: 600;
+  color: var(--text-color);
+}
+.country-page-details-value {
+  margin: 0;
+  font-weight: 300;
+  color: var(--text-color);
+}
+
+
+/* COUNTRY-PAGE-BORDER-COUNTRIES */
+.country-page-border-countries {
+  display: flex;
+  align-items: center;
+}
+.country-page-border-countries-heading {
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 16px;
+  font-weight: 600;
+  line-height: 24px;
+}
+.country-page-border-countries-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.country-page-border-countries-link {
+  min-width: 96px;
+  padding: 5px 10px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  border-radius: 2px;
+  border: 0px solid #979797;
+  text-align: center;
+  background-color: var(--element-bg);
+  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.10);
+  transition: background-color var(--transition-duration),
+    color var(--transition-duration);
+}
+.country-page-border-countries-link:not(:last-child){
+  margin-right: 10px;
+}
+.country-page-border-countries-link:hover{
+  opacity: 0.8;
+}
+.country-page-border-countries-link:active{
+  opacity: 0.6;
 }
